# SHUtils

./: Cargo.toml  TODO  diesel.toml
migrations/2024-12-09-181119_create_entities/: down.sql  up.sql
src/: counter.rs  hunt.rs  main.rs  models.rs  pokemon.rs  schema.rs  shiny.rs  theme.rs
src/data/: mod.rs  names.rs  species.rs
src/screens/: counters.rs  encounters.rs  hunts.rs  mod.rs  shinies.rs
