[package]
name = "SHUtils"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
dirs = "5.0.1"
iced = { version = "0.13.1", features = ["image", "advanced", "svg"] }
serde = { version = "1.0.210", features = ["derive"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time"] }
time = "0.3.37"
diesel_migrations = "2.2.0"
log = "0.4.22"
